--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -40,7 +40,7 @@ locations-stopwords: # set of subjects separated by ; that will be removed from 
 # see _data/map-config.csv for field display options
 latitude: 47.24294135125228 #to determine center of map
 longitude: -122.48271066441751 #to determine center of map
-zoom-level: 13 # zoom level for map 
+zoom-level: 12 # zoom level for map 
 map-base: Esri_WorldImagery # set default base map, choose from: Esri_WorldStreetMap, Esri_NatGeoWorldMap, Esri_WorldImagery
 map-search: true # true/false, not suggested with large collections
 map-search-fuzziness: 0.35 # fuzzy search range from 1 = anything to 0 = exact match only
@@ -77,7 +77,7 @@ navbar-background: bg-light
 # BOOTSWATCH THEMES
 # You can replace the standard Bootstrap theme with a Bootswatch (https://github.com/thomaspark/bootswatch) option
 # Enter one of the following options below: cerulean; cosmo; cyborg; darkly; flatly; journal; litera; lumen; lux; materia; minty; pulse; sandstone; simplex; sketchy; slate; solar; spacelab; superhero; united; yeti 
-bootswatch: darkly
+bootswatch: morph
 
 # THEME FONTS
 base-font-size: 1.2em
