--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ source-code: https://github.com/aweymo/losttacoma
 # title of site appears in banner
 title: Lost Tacoma
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: a repository of demolished and unbuilt architecture
+tagline: a collection of demolished and unbuilt architecture on the Puget Sound
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
 description: "This repository is a partial representation of the Lost Tacoma collection, constituting 116 of the total 560 blueprints across 26 locations. The technical drawings include both proposed buildings which were never constructed and constructed buildings which are now demolished."
