--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ title: Lost Tacoma
 tagline: Demolished and Unbuilt Architecture on the Puget Sound
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "A partial representation of the Lost Tacoma collection, constituting 116 of the total 560 blueprints across 28 locations. All images courtesy of the Tacoma Public Library Northwest Room."
+description: "Proposed buildings which were never constructed and constructed buildings which are now demolished in the Puget Sound"
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: Andrew Weymouth
 
